home-assistant/hass/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hass
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: hass
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8123
      protocol: TCP
      targetPort: 8123
  selector:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: hass
