home-assistant/hass/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: hass
spec:
  rules:
  - host: hass.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hass
            port:
              number: 8123
